Style improvements to readability
Reworked the sheet's use of color to make it easier to read and follow. Also fixed some vertical alignment issues on rows to compliment the new row highlighting. 

Additionally, implemented the new colors by using CSS variables, thus facilitating further modifications to the sheet.

--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1,4 +1,7 @@
-﻿<div class="sheet-wrapper">
+﻿<script type="text/javascript" src="script. js"></script>
+
+
+<div class="sheet-wrapper">
 	<!-- HIDDEN FIELDS -->
 	<input type="hidden" name="attr_10" value="10" disabled="disabled" />
 	<input type="hidden" name="attr_VS" value="vs:" disabled="disabled" />
@@ -51,7 +54,7 @@
 	<div class="sheet-tab1">
 
 		<!-- _____ _____ ATTRIBUTE BOX _____ _____ -->
-		<div class="box attribute" style="float: left;">
+		<div class="box attribute">
 			<div class="table">
 				<div class="header">
 					<div class="cell col0">Attributes</div>
@@ -730,7 +733,7 @@
 
 		<div class="tab1-column2">
 
-			<div class="hp-lift-container" style="float: left; width:186px">
+			<div class="hp-lift-container">
 
 				<!-- HP, FP, ER, and Custom Pools -->
 				<div class="box stats">
@@ -1827,7 +1830,7 @@
 		</div><!-- tab1-column2 -->
 
 		<!-- _____ _____ POINT SUMMARY BOX _____ _____ -->
-		<div class="sheet-box sheet-points" style="float: left;">
+		<div class="sheet-box sheet-points" >
 			<div class="sheet-table">
 			    <input type="hidden" name="attr_toggle_unspent_points" class="sheet-toggle-unspoint-points" value="0" />
 				<div class="sheet-header">
@@ -13042,4 +13045,4 @@ See notes for weapon.</textarea>
 
 	}
 
-</script>
+</script</script>>
