--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -1,7 +1,4 @@
-﻿<script type="text/javascript" src="script. js"></script>
-
-
-<div class="sheet-wrapper">
+﻿<div class="sheet-wrapper">
 	<!-- HIDDEN FIELDS -->
 	<input type="hidden" name="attr_10" value="10" disabled="disabled" />
 	<input type="hidden" name="attr_VS" value="vs:" disabled="disabled" />
