--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -217,9 +217,18 @@
                 </div>
                 <!--Saving Throws and Experience-->
                 <div class="sheet-col-4-9">
+                    <div class="sheet-row">
+                        <div class="sheet-col-13-14">
+                            <h4 class="sheet-center">Equipo inicial</h4>
+                            <span class="sheet-handwrite" name="attr_equipo_inicial"></span>
+                    </div>
+                    <div>
+                    <div class="sheet-row">
+                        <div class="sheet-col-13-14">
                         <h4 class="sheet-center">Equipo</h4>
-                    <textarea class="sheet-handwrite" name="attr_equipo"></textarea>
-
+                        <textarea class="sheet-handwrite" name="attr_equipo"></textarea>
+                    </div>
+                    <div>
                 </div>
             </div>
         </div>
@@ -441,7 +450,7 @@
                 "hp_max": hp_max,
                 "mov": classes[clase_pj].mov,
                 "paga_mod": classes[clase_pj].paga,
-                "equipo": classes[clase_pj].equipo,
+                "equipo_inicial": classes[clase_pj].equipo,
                 "name_talent_1": classes[clase_pj].talento_1_nombre,
                 "des_talent_1": classes[clase_pj].talento_1_descripcion,
                 "name_talent_2": classes[clase_pj].talento_2_nombre,
