--- a/Nuestro-ultimo-verano/nuestroultimoverano.html
+++ b/Nuestro-ultimo-verano/nuestroultimoverano.html
@@ -225,7 +225,7 @@
                     <div>
                     <div class="sheet-row">
                         <div class="sheet-col-13-14">
-                        <h4 class="sheet-center">Equipo</h4>
+                        <h4 class="sheet-center">Inventario</h4>
                         <textarea class="sheet-handwrite" name="attr_equipo"></textarea>
                     </div>
                     <div>
