--- a/Monster of the Week/MotWHTML.html
+++ b/Monster of the Week/MotWHTML.html
@@ -4,7 +4,7 @@
         <b><i><span data-i18n="character-gender">Gender</span>:</i></b> <input type="text" name="attr_Gender">   
         <b><i><span data-i18n="playbook">Playbook</span>:</i></b>         
             <select class="sheet-SkinSelect" name="attr_SkinName" >
-                <option class="sheet-SkinSelect" value="0" checked="checked"> <span data-i18n="playbook-choice">Choose A Playbook</span></option>
+                <option class="sheet-SkinSelect" value="0" checked="checked"> <span data-i18n="playbook-choice">Playbook</span></option>
                 <option class="sheet-SkinSelect" value="1"> <span data-i18n="the-chosen">The Chosen</span></option>
                 <option class="sheet-SkinSelect" value="2"> <span data-i18n="the-crooked">The Crooked</span></option>
                 <option class="sheet-SkinSelect" value="3"> <span data-i18n="the-divine">The Divine</span></option>
@@ -54,7 +54,7 @@
                         <input type="checkbox" class="sheet-Luck-Chosen" name="attr_Luck-Chosen4">
                         <input type="checkbox" class="sheet-Luck-Chosen" name="attr_Luck-Chosen5">
                         <input type="checkbox" class="sheet-Luck-Chosen" name="attr_Luck-Chosen6">
-                        <input type="checkbox" class="sheet-Luck-Chosen" name="attr_Luck-Chosen7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Chosen" name="attr_Luck-Chosen7"> <span data-i18n="doomed">Doomed</span><br></p>
                         <i><span data-i18n="special">Special</span>:</i> <span data-i18n="luck-special-chosen">When you spend <i>Luck</i> the Keeper will bring your fate into play</span>
                         </div><br>
                         <div class="sheet-Harm-Chosen"><b><i><span data-i18n="harm">Harm</span></i></b><br>
@@ -77,7 +77,7 @@
                         <span data-i18n="xp-description">Once you have filled all 5 boxes, uncheck them and choose an <i>Improvement</i> option</span>
                     </div><br>
                    <div class="sheet-Fate-Chosen"><b><i><span data-i18n="your-fate">Your Fate</span></i></b><br>
-                   <span data-i18n="fate-description">How you found out you were the chosen one:
+                   <span data-i18n="fate-description">How you found out you were the chosen one</span>:
                     <select class="sheet-FateSelect-Chosen" name="attr_FateSelect-Chosen" >
                         <option class="sheet-FateSelect-Chosen" value="F0" checked="checked"> <span data-i18n="choose-one">Choose one</span></option>
                         <option class="sheet-FateSelect-Chosen" value="F1"> <span data-i18n="fate-origin1">Some weirdo told you</span></option>
@@ -89,12 +89,12 @@
                         <option class="sheet-FateSelect-Chosen" value="F7"> <span data-i18n="fate-origin7">Visions and nightmares</span></option>
                     </select><br>
                     <span data-i18n="fate-unfold">How your fate will unfold</span>: <br>
-                    <span data-i18n="heroic">Heroic</span>: <i>(pick two)</i>
+                    <span data-i18n="heroic">Heroic</span>: <i>(<span data-i18n="pick-two">pick two</span>)</i>
                     <p align=center><input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen1"> <span data-i18n="fate-heroic1">Sacrifice</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen2"> <span data-i18n="fate-heroic2">You are the Champion</span> 
-                    <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen3"> <span data-i18n="fate-heroic3"><span data-i18n="fate1">Visions</span> 
+                    <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen3"> <span data-i18n="fate-heroic3">Visions</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen4"> <span data-i18n="fate-heroic4">Secret Training</span> 
-                    <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen5"> <span data-i18n="fate-heroic5"><span data-i18n="fate1">True Love</span> 
+                    <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen5"> <span data-i18n="fate-heroic5">True Love</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen6"> <span data-i18n="fate-heroic6">Magical Powers</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen7"> <span data-i18n="fate-heroic7">Mystical Inheritance</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen8"> <span data-i18n="fate-heroic8">A Normal Life</span> 
@@ -102,7 +102,7 @@
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen10"> <span data-i18n="fate-heroic10">Hidden Allies</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen11"> <span data-i18n="fate-heroic11">Divine Help</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen12"> <span data-i18n="fate-heroic12">You Can Save the World</span></p>
-                    <span data-i18n="doom">Doom</span>: <i><span data-i18n="pick-two">(pick two)</span></i>
+                    <span data-i18n="doom">Doom</span>: <i>(<span data-i18n="pick-two">pick two</span>)</i>
                     <p align=center><input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen13"> <span data-i18n="fate-doom1">Death</span>
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen14"> <span data-i18n="fate-doom2">You Can't Save Everyone</span> 
                     <input type="checkbox" class="sheet-Fate-Chosen" name="attr_Fate-Chosen15"> <span data-i18n="fate-doom3">Impossible Love</span> 
@@ -221,7 +221,7 @@
                         <input type="checkbox" class="sheet-Luck-Crooked" name="attr_Luck-Crooked4">
                         <input type="checkbox" class="sheet-Luck-Crooked" name="attr_Luck-Crooked5">
                         <input type="checkbox" class="sheet-Luck-Crooked" name="attr_Luck-Crooked6">
-                        <input type="checkbox" class="sheet-Luck-Crooked" name="attr_Luck-Crooked7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Crooked" name="attr_Luck-Crooked7"> <span data-i18n="doomed">Doomed</span><br></p>
                         <i><span data-i18n="special">Special</span>:</i> <span data-i18n="luck-special-Crooked">When you spend <i>Luck</i> someone from your past will re-appear in your life, soon</span>
                         </div><br>
                         <div class="sheet-Harm-Crooked"><b><i><span data-i18n="harm">Harm</span></i></b><br>
@@ -377,7 +377,7 @@
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine4">
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine5">
                         <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine6">
-                        <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Divine" name="attr_Luck-Divine7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Divine"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Divine" name="attr_Harm-Divine1">
@@ -496,7 +496,7 @@
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert4">
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert5">
                         <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert6">
-                        <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Expert" name="attr_Luck-Expert7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Expert"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Expert" name="attr_Harm-Expert1">
@@ -625,7 +625,7 @@
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake4">
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake5">
                         <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake6">
-                        <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Flake" name="attr_Luck-Flake7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Flake"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Flake" name="attr_Harm-Flake1">
@@ -747,7 +747,7 @@
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate4">
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate5">
                         <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate6">
-                        <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Initiate" name="attr_Luck-Initiate7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Initiate"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Initiate" name="attr_Harm-Initiate1">
@@ -915,7 +915,7 @@
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous4">
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous5">
                         <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous6">
-                        <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Monsterous" name="attr_Luck-Monsterous7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Monsterous"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Monsterous" name="attr_Harm-Monsterous1">
@@ -1053,7 +1053,7 @@
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane4">
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane5">
                         <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane6">
-                        <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Mundane" name="attr_Luck-Mundane7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Mundane"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Mundane" name="attr_Harm-Mundane1">
@@ -1180,7 +1180,7 @@
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional4">
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional5">
                         <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional6">
-                        <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Professional" name="attr_Luck-Professional7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Professional"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Professional" name="attr_Harm-Professional1">
@@ -1335,7 +1335,7 @@
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger4">
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger5">
                         <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger6">
-                        <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Spellslinger" name="attr_Luck-Spellslinger7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Spellslinger"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Spellslinger" name="attr_Harm-Spellslinger1">
@@ -1474,7 +1474,7 @@
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky4">
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky5">
                         <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky6">
-                        <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Spooky" name="attr_Luck-Spooky7"> <span data-i18n="doomed">Doomed</span><br></p>
                         <i><span data-i18n="special">Special</span>:</i> <span data-i18n="luck-special-Spooky">As you spend <i>Luck</i> your Dark Side's needs will get nastier</span>
                         </div><br>
                         <div class="sheet-Harm-Spooky"><b><i><span data-i18n="harm">Harm</span></i></b><br>
@@ -1623,7 +1623,7 @@
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged4">
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged5">
                         <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged6">
-                        <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Wronged" name="attr_Luck-Wronged7"> <span data-i18n="doomed">Doomed</span><br></p>
                         </div><br>
                         <div class="sheet-Harm-Wronged"><b><i><span data-i18n="harm">Harm</span></i></b><br>
                         <p align=center> <span data-i18n="okay">Okay</span> <input type="checkbox" class="sheet-Harm-Wronged" name="attr_Harm-Wronged1">
@@ -1778,7 +1778,7 @@
                         <input type="checkbox" class="sheet-Luck-Custom" name="attr_Luck-Custom4">
                         <input type="checkbox" class="sheet-Luck-Custom" name="attr_Luck-Custom5">
                         <input type="checkbox" class="sheet-Luck-Custom" name="attr_Luck-Custom6">
-                        <input type="checkbox" class="sheet-Luck-Custom" name="attr_Luck-Custom7"> <span data-i18n="select-text">Doomed</span><br></p>
+                        <input type="checkbox" class="sheet-Luck-Custom" name="attr_Luck-Custom7"> <span data-i18n="doomed">Doomed</span><br></p>
                         <i><span data-i18n="special">Special</span> (<span data-i18n="luck-special-Custom">if any</span>): </i> <input type="text" name="attr_LuckSpecial-Custom" />
                         </div><br>
                         <div class="sheet-Harm-Custom"><b><i><span data-i18n="harm">Harm</span></i></b><br>
@@ -1843,8 +1843,8 @@
             <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp3"> +1 <span data-i18n="sharp">Sharp</span
             <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp4"> +1 <span data-i18n="tough">Tough</span>
             <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp5"> +1 <span data-i18n="weird">Weird</span><br>
-            <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp6"> <span data-i18n="another-move">Take another <span data-i18n="Custom">Custom</span> move</span>
-            <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp7"> <span data-i18n="another-move">Take another <span data-i18n="Custom">Custom</span> move</span>
+            <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp6"> <span data-i18n="another-move">Take another <span data-i18n="custom">Custom</span> move</span>
+            <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp7"> <span data-i18n="another-move">Take another <span data-i18n="custom">Custom</span> move</span>
             <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp8"> <span data-i18n="playbook-move">Take a move from another playbook</span>
             <input type="checkbox" class="sheet-Imp-Custom" name="attr_Custom-Imp9"> <span data-i18n="playbook-move">Take a move from another playbook</span><br>
             <input type="checkbox" class="sheet-Advs-Custom" name="attr_Custom-Adv10"> <input type="text" name="attr_Advance-Custom1" />
@@ -1869,7 +1869,7 @@
     
 </p></div>
 <br><br><br>
-<font size="0.5"><span data-i18n="sheet-version">sheet version</span> 2.0.0</font>
+<font size="0.5"><span data-i18n="sheet-version">sheet version</span> 0.1.0</font>
 </div>
 
 
