--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -15553,26 +15553,27 @@
 		<div class="sheet-section sheet-section-goetter-allgemein" align="center">
 			<div align="left" style="display:inline-block" data-i18n="Tradition">Tradition: </div>
 				<select type="number" name="attr_tradition_goetter" style="width: 10em;">
-					<option value="---" data-i18n="---">---</option>
+					<option value="---">---</option>
 					<option value="Praios" data-i18n="Praios">Praios</option>
 					<option value="Rondra" data-i18n="Rondra">Rondra</option>
 					<option value="Boron" data-i18n="Boron">Boron</option>
 					<option value="Hesinde" data-i18n="Hesinde">Hesinde</option>
 					<option value="Phex" data-i18n="Phex">Phex</option>
 					<option value="Peraine" data-i18n="Peraine">Peraine</option>
-					<option value="Firun" disabled data-i18n="Firun">Firun</option>
-					<option value="Tsa" disabled data-i18n="Tsa">Tsa</option>
-					<option value="Travia" disabled data-i18n="Travia">Travia</option>
-					<option value="Ingerimm" disabled data-i18n="Ingerimm">Ingerimm</option>
-					<option value="Efferd" disabled data-i18n="Efferd">Efferd</option>
-					<option value="Rahja" disabled data-i18n="Rahja">Rahja</option>
+					<option value="Firun" data-i18n="Firun">Firun</option>
+					<option value="Tsa" data-i18n="Tsa">Tsa</option>
+					<option value="Travia" data-i18n="Travia">Travia</option>
+					<option value="Ingerimm" data-i18n="Ingerimm">Ingerimm</option>
+					<option value="Efferd" data-i18n="Efferd">Efferd</option>
+					<option value="Rahja" data-i18n="Rahja">Rahja</option>
 				</select>
-			<div align="left" style="display:inline-block" data-i18n="Tradition">Tradition: </div>
+			<div align="left" style="display:inline-block" data-i18n="Leiteigenschaft">Leiteigenschaft: </div>
 				<select type="number" name="attr_tradition_goetter_leiteigenschaft" style="width: 10em;">
 					<option value="--">--</option>
 					<option value="MU" data-i18n="MU">MU</option>
 					<option value="KL" data-i18n="KL">KL</option>
 					<option value="IN" data-i18n="IN">IN</option>
+					<option value="CH" data-i18n="CH">CH</option>
 				</select>
 			<div class='sheet-2colrow'>
 				<div class='sheet-col'>
@@ -18140,14 +18141,30 @@ on("change:tradition_goetter", function() {
 		if (values.tradition_goetter == "Peraine") {
 			setAttrs({ tradition_goetter_leiteigenschaft: "IN" });
 		}
+		if (values.tradition_goetter == "Firun") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "MU" });
+		}
+		if (values.tradition_goetter == "Tsa") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "CH" });
+		}
+		if (values.tradition_goetter == "Travia") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "KL" });
+		}
+		if (values.tradition_goetter == "Ingerimm") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "IN" });
+		}
+		if (values.tradition_goetter == "Efferd") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "CH" });
+		}
+		if (values.tradition_goetter == "Rahja") {
+			setAttrs({ tradition_goetter_leiteigenschaft: "CH" });
+		}
 	});
 });
 
-on("change:tradition_goetter_leiteigenschaft", function() {
-	getAttrs(["tradition_goetter_leiteigenschaft", "KL_Wert", "IN_Wert", "MU_Wert"], function(values) {
-		if (values.tradition_goetter_leiteigenschaft == "--") {
+on("change:tradition_goetter_leiteigenschaft change:KL_Wert change:IN_Wert change:MU_Wert change: CH_Wert", function() {
+	getAttrs(["tradition_goetter_leiteigenschaft", "KL_Wert", "IN_Wert", "MU_Wert", "CH_Wert"], function(values) {
 			setAttrs({ KE_Leiteigenschaft: 0 });
-		}
 		if (values.tradition_goetter_leiteigenschaft == "KL") {
 			setAttrs({ KE_Leiteigenschaft: values.KL_Wert });
 		}
@@ -18156,6 +18173,9 @@ on("change:tradition_goetter_leiteigenschaft", function() {
 		}
 		if (values.tradition_goetter_leiteigenschaft == "MU") {
 			setAttrs({ KE_Leiteigenschaft: values.MU_Wert });
+		}
+		if (values.tradition_goetter_leiteigenschaft == "CH") {
+			setAttrs({ KE_Leiteigenschaft: values.CH_Wert });
 		}
 	});
 }); 
