--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3352,6 +3352,7 @@
 					<th data-i18n="Stufe-2">Stufe II<br>(-2)</th>
 					<th data-i18n="Stufe-3">Stufe III<br>(-3)</th>
 					<th data-i18n="Stufe-4">Stufe IV<br>(Handlungsunfähig)</th>
+					<th data-i18n="Modifikator">Modifikator</th>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Betäubung">Betäubung</td>
@@ -3360,6 +3361,7 @@
 					<td><input type="radio" name="attr_Betaeubung" value="2"></td>
 					<td><input type="radio" name="attr_Betaeubung" value="3"></td>
 					<td><input type="radio" name="attr_Betaeubung" value="4"></td>
+					<td/>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Entrückt">Entrückt</td>
@@ -3368,6 +3370,7 @@
 					<td><input type="radio" name="attr_Entrueckt" value="2"></td>
 					<td><input type="radio" name="attr_Entrueckt" value="3"></td>
 					<td><input type="radio" name="attr_Entrueckt" value="4"></td>
+					<td/>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Furcht">Furcht</td>
@@ -3376,6 +3379,7 @@
 					<td><input type="radio" name="attr_Furcht" value="2 - @{Kampfstil-Mengbilla-Stil}"></td>
 					<td><input type="radio" name="attr_Furcht" value="3 - @{Kampfstil-Mengbilla-Stil}"></td>
 					<td><input type="radio" name="attr_Furcht" value="4"></td>
+					<td/>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Paralyse">Paralyse</td>
@@ -3384,6 +3388,7 @@
 					<td><input type="radio" name="attr_Paralyse" value="2"></td>
 					<td><input type="radio" name="attr_Paralyse" value="3"></td>
 					<td><input type="radio" name="attr_Paralyse" value="4"></td>
+					<td/>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Schmerz">Schmerz</td>
@@ -3392,6 +3397,7 @@
 					<td><input type="radio" name="attr_Schmerz" value="2 - @{vorteil_zaeher_hund} + @{nachteil_zerbrechlich}"></td>
 					<td><input type="radio" name="attr_Schmerz" value="3 - @{vorteil_zaeher_hund} + @{nachteil_zerbrechlich}"></td>
 					<td><input type="radio" name="attr_Schmerz" value="4"></td>
+					<td><input type="number" name="attr_Schmerz_korr" value="0" min="-4" max="0"</td>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Verwirrung">Verwirrung</td>
@@ -3400,12 +3406,13 @@
 					<td><input type="radio" name="attr_Verwirrung" value="2"></td>
 					<td><input type="radio" name="attr_Verwirrung" value="3"></td>
 					<td><input type="radio" name="attr_Verwirrung" value="4"></td>
+					<td/>
 				</tr>
 			</table>
 			<table>
 				<tr>
 					<td data-i18n="Abzüge-gesamt">Abzüge gesamt:</td>
-					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Schmerz} + @{Verwirrung})" /></td>
+					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Verwirrung} + (((@{Schmerz} + @{Schmerz_korr}) + abs(@{Schmerz} + @{Schmerz_korr}))/2) )" /></td>
 				</tr>
 				<tr>
 					<td data-i18n="Abzüge-effektiv-ohne-BE">Abzüge effektiv ohne BE:</td>
@@ -17466,7 +17473,6 @@
 		<!-- <br><b>Danke an alle Tester für das zahlreiche Feedback</b> -->
 		<br><b>DAS SCHWARZE AUGE, AVENTURIEN, DERE, MYRANOR, THARUN, UTHURIA und RIESLAND sind eingetragene Marken der Significant Fantasy Medienrechte GbR. Ohne vorherige schriftliche Genehmigung der Ulisses Medien und Spiel Distribution GmbH ist eine Verwendung der genannten Markenzeichen nicht gestattet.</b>
 	</span>
-	<div data-i18n="placeholder" style="display: none;">placeholder</div>
 </div>
 
 <rolltemplate class="sheet-rolltemplate-DSA-Eigenschaft">
