--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3392,12 +3392,12 @@
 				</tr>
 				<tr align="center">
 					<td data-i18n="Schmerz">Schmerz</td>
-					<td><input type="radio" name="attr_Schmerz" value="0" checked="checked"></td>
-					<td><input type="radio" name="attr_Schmerz" value="1 - @{vorteil_zaeher_hund} + @{nachteil_zerbrechlich}"></td>
-					<td><input type="radio" name="attr_Schmerz" value="2 - @{vorteil_zaeher_hund} + @{nachteil_zerbrechlich}"></td>
-					<td><input type="radio" name="attr_Schmerz" value="3 - @{vorteil_zaeher_hund} + @{nachteil_zerbrechlich}"></td>
-					<td><input type="radio" name="attr_Schmerz" value="4"></td>
-					<td><input type="number" name="attr_Schmerz_korr" value="0" min="-4" max="0"</td>
+					<td><input type="radio" name="attr_Schmerz" value="0" checked="checked" readonly></td>
+					<td><input type="radio" name="attr_Schmerz" value="1" readonly></td>
+					<td><input type="radio" name="attr_Schmerz" value="2" readonly></td>
+					<td><input type="radio" name="attr_Schmerz" value="3" readonly></td>
+					<td><input type="radio" name="attr_Schmerz" value="4" readonly></td>
+					<td><input type="number" name="attr_schmerz_korr" value="0" min="-4" max="0"</td>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Verwirrung">Verwirrung</td>
@@ -3412,7 +3412,7 @@
 			<table>
 				<tr>
 					<td data-i18n="Abzüge-gesamt">Abzüge gesamt:</td>
-					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Verwirrung} + (((@{Schmerz} + @{Schmerz_korr}) + abs(@{Schmerz} + @{Schmerz_korr}))/2) )" /></td>
+					<td><input name="attr_Zustand_Mod" type="number" disabled="true" value="-1*(@{Betaeubung} + @{Entrueckt} + @{Furcht} + @{Paralyse} + @{Verwirrung} + (((@{Schmerz} + @{schmerz_korr}) + abs(@{Schmerz} + @{schmerz_korr}))/2) )" /></td>
 				</tr>
 				<tr>
 					<td data-i18n="Abzüge-effektiv-ohne-BE">Abzüge effektiv ohne BE:</td>
@@ -17978,6 +17978,35 @@
 </rolltemplate>
 
 <script type="text/worker">
+
+on("change:le_wert change:le_wert_max change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
+	getAttrs(["LE_Wert", "LE_Wert_max", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
+	var i, le, s1, s2, s3, s4 ;
+	i = 0 ;
+	le = parseInt(values.LE_Wert) // = IST LeP im Sheet, Usereingabe
+	s1 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.25) ;  // NOCH ANPASSEN, _max muss automatisch befüllt werden bei Änderung der LeP in den Basiswerten
+	s2 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.5) ;
+	s3 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.75) ;
+		if (le <= s1) { 
+			i++ ; 
+		}	
+		if (values.nachteil_zerbrechlich == 1 && i > 0) { //wenn schmerz > 0, addiere zerbrechlich-Nachteil
+			i++ ;
+		}
+		if (le <= s2) {
+			i++ ;
+		} 
+		if (le <= s3) {
+			i++;
+		}
+		if (le <= 5) {
+			i++;
+		}
+	i = i + parseInt(values.schmerz_korr) ;
+	i = Math.min(Math.max(parseInt(i), 0), 4) ;
+		setAttrs({ Schmerz: i }) ;
+	});
+});
 
 on("change:erfahrungsgrad", function() {
 	getAttrs(["Erfahrungsgrad", "APgesamt"], function(values) {
