--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -3397,7 +3397,14 @@
 					<td><input type="radio" name="attr_Schmerz" value="2" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="3" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="4" readonly></td>
-					<td><input type="number" name="attr_schmerz_korr" value="0" min="-4" max="0"</td>
+					<td><input type="number" name="attr_schmerz_korr" value="0" min="-4" max="4">
+						<span class="sheet-tooltip-ef">
+							<img align="center" src="http://i.imgur.com/fK8iLhI.png" />
+							<span>
+								<div> Die Schmerzstufe wird automatisch berechnet.<br>Via Modifikator kann manuell angepasst werden:<br>Minus(-): zieht Schmerzstufen ab<br> Plus(+): fügt Schmerzstufen hinzu. </div>
+							</span>
+						</span>
+					</td>
 				</tr>
 				<tr align="center">
 					<td data-i18n="Verwirrung">Verwirrung</td>
