--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -342,7 +342,7 @@
 						<input type="number" name="attr_LE_Spezies" value="5" style="display:none;" />
 						<input class="hidden sheet-gegner" type="checkbox" name="attr_gegner_sheet" value="1"/>
 						<div class="grundwert-name" data-i18n="Lebensenergie">Lebensenergie</div>
-						<div class="grundwert-basiswert sheet-kein-gegner"><input type="number" name="attr_LE_Grundwert" disabled="true" value="@{LE_Spezies}+2*(@{KO_Wert})+@{vorteil_hohe_lebenskraft_stufe}-@{nachteil_niedrige_lebenskraft_stufe}+@{LE_Zukauf}"></div>
+						<div class="grundwert-basiswert sheet-kein-gegner"><input type="number" name="attr_LE_Grundwert" value="0" readonly></div>
 						<div class="grundwert-wert"><input type="number" name="attr_LE_Wert" value="0"></div>
 						<div class="grundwert-zukauf sheet-kein-gegner"><input type="number" name="attr_LE_Zukauf" value="0"></div>
 						<div class="grundwert-max sheet-kein-gegner"><input type="number" disabled="true" name="attr_LE_Zukauf_Max" value="@{KO_Wert}"></div>
@@ -17986,14 +17986,31 @@
 
 <script type="text/worker">
 
-on("change:le_wert change:le_wert_max change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
-	getAttrs(["LE_Wert", "LE_Wert_max", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
-	var i, le, s1, s2, s3, s4 ;
+// Update LE_Grundwert und LE_Wert_max, wenn sich ein Parameter ändert der in die Berechnung einfliesst.
+on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vorteil_hohe_lebenskraft_stufe change:nachteil_niedrige_lebenskraft change:nachteil_niedrige_lebenskraft_stufe change:le_zukauf", function() {
+	getAttrs(["LE_Spezies", "KO_Wert", "vorteil_hohe_lebenskraft", "vorteil_hohe_lebenskraft_stufe", "nachteil_niedrige_lebenskraft", "nachteil_niedrige_lebenskraft_stufe", "LE_Zukauf"], function(values) {
+	var i ;
+	i = 0 ;
+	i += parseInt(values.LE_Spezies) + (2 * parseInt(values.KO_Wert)) + parseInt(values.LE_Zukauf) ;
+		if (values.vorteil_hohe_lebenskraft == 1) {
+			i += parseInt(values.vorteil_hohe_lebenskraft_stufe) ;
+		}
+		else if (values.nachteil_niedrige_lebenskraft == 1) {
+			i -= parseInt(values.nachteil_niedrige_lebenskraft_stufe) ;
+		}	
+	setAttrs({ LE_Grundwert: i, LE_Wert_max: i}) ;
+	});
+});
+
+//automatisch Schmerzstufe ermitteln
+on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
+	getAttrs(["LE_Wert", "LE_Grundwert", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
+	var i, le, s1, s2, s3 ;
 	i = 0 ;
 	le = parseInt(values.LE_Wert) // = IST LeP im Sheet, Usereingabe
-	s1 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.25) ;  // NOCH ANPASSEN, _max muss automatisch befüllt werden bei Änderung der LeP in den Basiswerten
-	s2 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.5) ;
-	s3 = parseInt(values.LE_Wert_max) - Math.round(parseInt(values.LE_Wert_max) * 0.75) ;
+	s1 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.25) ; 
+	s2 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.5) ;
+	s3 = parseInt(values.LE_Grundwert) - Math.round(parseInt(values.LE_Grundwert) * 0.75) ;
 		if (le <= s1) { 
 			i++ ; 
 		}	
@@ -18331,7 +18348,6 @@ on("change:parierwaffe_aktiv change:parierwaffepamod1 change:parierwaffepamod2 c
 		}
 	});
 });
-
 
 on("change:fkw_aktiv change:fkwfk1 change:fkwfk2 change:fkwfk3 change:fkwfk4 change:fkwschaden1_1 change:fkwschaden2_1 change:fkwschaden3_1 change:fkwschaden4_1 change:fkwschaden1_2 change:fkwschaden2_2 change:fkwschaden3_2 change:fkwschaden4_2 change:fkwreichweite1 change:fkwreichweite2 change:fkwreichweite3 change:fkwreichweite4", function() {
 	getAttrs(["FKW_Aktiv", "FKWFK1", "FKWFK2", "FKWFK3", "FKWFK4", "FKWSchaden1_1", "FKWSchaden2_1", "FKWSchaden3_1", "FKWSchaden4_1", "FKWSchaden1_2", "FKWSchaden2_2", "FKWSchaden3_2", "FKWSchaden4_2", "FKWReichweite1", "FKWReichweite2", "FKWReichweite3", "FKWReichweite4"], function(values) {
