--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -18002,6 +18002,14 @@ on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vort
 	});
 });
 
+//Spieler darf selber Schmerz nicht ändern
+on("change:schmerz", function(eventInfo) {
+	if (eventInfo.sourceType == "player") {
+		setAttrs({ Schmerz: eventInfo.previousValue }) ;
+		console.log(eventInfo.previousValue) ;
+	}
+	});
+	
 //automatisch Schmerzstufe ermitteln
 on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
 	getAttrs(["LE_Wert", "LE_Grundwert", "vorteil_zaeher_hund", "nachteil_zerbrechlich", "schmerz_korr"], function(values) {
