--- a/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_5/dsa5_character_sheet_roll20.html
@@ -1,5 +1,5 @@
 <link href="dsa5_character_sheet_roll20.css" rel="stylesheet" type="text/css">
-<button type='roll' class='sheet-log' name="roll_version" value="/w @{character_name} https://github.com/Roll20/roll20-character-sheets/blob/master/Das_Schwarze_Auge_5/changelog.md">Version 1.2.4</button>
+<button type='roll' class='sheet-log' name="roll_version" value="/w @{character_name} https://github.com/Roll20/roll20-character-sheets/blob/master/Das_Schwarze_Auge_5/changelog.md">Version 1.2.5</button>
 <button type='roll' class='sheet-log' name="roll_anleitung" value="/w @{character_name} https://github.com/Roll20/roll20-character-sheets/blob/master/Das_Schwarze_Auge_5/readme.md"><span data-i18n="readme:">Anleitung</span></button>
 <button type='roll' class='sheet-log' name="roll_report" value="/w @{character_name} https://github.com/Meteox/roll20-character-sheets/issues"><span data-i18n="report:">Wünsche/Vorschläge/Fehler melden</span></button>
 <img align="right" width="200" src="http://i.imgur.com/mVMQ7fW.png" /><br><br>
@@ -3392,6 +3392,7 @@
 				</tr>
 				<tr align="center">
 					<td data-i18n="Schmerz">Schmerz</td>
+					<input type="hidden" name="attr_Schmerz_max" value="4">
 					<td><input type="radio" name="attr_Schmerz" value="0" checked="checked" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="1" readonly></td>
 					<td><input type="radio" name="attr_Schmerz" value="2" readonly></td>
@@ -17474,7 +17475,7 @@
 		</div>
 
 	</div>
-		<br><b>DSA5 Character Sheet German Ver. 1.2.4</b>
+		<br><b>DSA5 Character Sheet German Ver. 1.2.5</b>
 	<span  data-i18n="endnote">
 		<br><b>Created by Patrick Gebhardt, enhanced by Sönke Holsten, Adam Fedor, Marc Ehrenmann</b>
 		<!-- <br><b>Danke an alle Tester für das zahlreiche Feedback</b> -->
@@ -18005,10 +18006,9 @@ on("change:le_spezies change:ko_wert change:vorteil_hohe_lebenskraft change:vort
 //Spieler darf selber Schmerz nicht ändern
 on("change:schmerz", function(eventInfo) {
 	if (eventInfo.sourceType == "player") {
-		setAttrs({ Schmerz: eventInfo.previousValue }) ;
-		console.log(eventInfo.previousValue) ;
+		setAttrs({ Schmerz: eventInfo.previousValue, Schmerz_max: 4 }) ;
 	}
-	});
+});
 	
 //automatisch Schmerzstufe ermitteln
 on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachteil_zerbrechlich change:schmerz_korr", function() {
@@ -18036,7 +18036,7 @@ on("change:le_wert change:le_grundwert change:vorteil_zaeher_hund change:nachtei
 		}
 	i = i + parseInt(values.schmerz_korr) ;
 	i = Math.min(Math.max(parseInt(i), 0), 4) ;
-		setAttrs({ Schmerz: i }) ;
+		setAttrs({ Schmerz: i, Schmerz_max: 4 }) ;
 	});
 });
 
