reset roll flags to empty string rather than to 0

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -3838,6 +3838,6 @@
     var resetRollFlags = function() { 
         return allStats
             .map((attribute) => `${attribute}_flag`)
-            .reduce((attrs, flag) => ({ ...attrs, [flag]: 0 }), {});
+            .reduce((attrs, flag) => ({ ...attrs, [flag]: "" }), {});
     }
 </script>
